# robotics

./: README.md
bag_files/calibration/: metadata.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/assignment2_publisher_subscriber/share/assignment2_publisher_subscriber/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/assignment2_publisher_subscriber/: setup.py
src/assignment2_publisher_subscriber/assignment2_publisher_subscriber/: subscriber.py
src/assignment2_publisher_subscriber_avd/: setup.cfg  setup.py
src/assignment2_publisher_subscriber_avd/assignment2_publisher_subscriber_avd/: subscriber.py
src/assignment4_avd/: package.xml  setup.cfg  setup.py
src/assignment4_avd/assignment4_avd/: camera_processing_node.py
src/binary_image/: frames_2025-05-15_14.03.27.gv  package.xml  setup.cfg  setup.py
src/camera_parameters/: package.xml  setup.cfg  setup.py
src/lidar/: package.xml  setup.py
src/lidar/lidar/: lidar.py
src/odometry/: package.xml  setup.py
src/odometry/odometry/: distance.py
src/ransac/: package.xml  setup.py
src/ransac/ransac/: .lanedetector.py.swp  lanedetector.py
src/simple_parking_maneuver/src/: parking_maneuver.py
src/simple_parking_maneuver_avd/: CMakeLists.txt  package.xml
src/simple_parking_maneuver_avd/launch/: simple_parking_maneuver.launch
src/simple_parking_maneuver_avd/src/: parking_maneuver.py
src/ticks/: package.xml  setup.cfg  setup.py
src/wheel_speed/: package.xml  setup.cfg  setup.py
uebung_09/: gps.py
(+27 files in other folders)
